Refactor forgotPassword and Added Logger and Validation in forgotPassword
